css/style.css
/*!
=========================================================
* iamvisshu Landing page
=========================================================

* Copyright: 2024 iamvisshu (https://github.com/iamvisshu)
* Coded by https://github.com/iamvisshu

=========================================================

* The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
*/

/* Add styles for the body */
body {
    font-family: Arial, sans-serif;
    margin: 0;
    background-color: #f4f4f9;
}

/* Add styles for the main body container */
.container {
    text-align: center;
    padding: 20px;
    background: #fff;
    border-radius: 10px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
    margin: 20px; /* Add margin to the container */
    background-color: #D5D5D5; /* Very light blue background color */
}

#stats {
    margin-top: 20px;
}

/* Add styles for the data tiles */
.launch-tile {
    background-color: #f4f4f9;
    border: 1px solid #000000;
    border-radius: 5px;
    padding: 20px;
    margin: 10px;
    width: 300px; /* Set a fixed width for each tile */
    display: inline-block; /* Display tiles inline */
}

.row {
    text-align: center;
    font-size: 0; /* Removes whitespace between inline-block elements */
}

.row .launch-tile {
    font-size: initial;
    margin-right: 10px; /* Add right margin to each tile */
}

.row .launch-tile:last-child {
    margin-right: 0; /* Remove right margin for the last tile in each row */
}

/* Add styles for the navigation */
.navigation {
    display: flex;
    align-items: center; /* Align items vertically */
    margin-bottom: 20px;
}

/* Add styles for the buttons */
button {
    padding: 10px 20px;
    background: #007bff;
    color: #fff;
    border: none;
    border-radius: 5px;
    cursor: pointer;
    margin-top: 20px;
}

button:hover {
    background: #0056b3;
}

#aboutMe-button {
    margin-left: 10px; /* Add margin to separate it from the Homepage button */
}

/* Add styles for the search box */
.search-container {
    display: flex;
    margin-top: 20px;
    margin-left: auto; /* Push the search box and button to the right */
	align-items: flex-end; /* Adjusted alignment */
}

#search-input {
    padding: 5px;
    width: 200px;
}

#search-button {
    padding: 5px 10px;
    margin-left: 5px;
}

/* Add styles for the spinner */
.spinner {
    border: 4px solid rgba(0, 0, 0, 0.1);
    border-left-color: #007bff; /* Change this to match your button color */
    border-radius: 50%;
    width: 40px;
    height: 40px;
    animation: spin 1s linear infinite;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

@keyframes spin {
    0% { transform: rotate(0deg); }
    100% { transform: rotate(360deg); }
}

/* CSS for mobile screens */
@media screen and (max-width: 600px) {
    .navigation {
        flex-direction: column;
        align-items: flex-start;
    }
}

/* CSS for Footer
CSS for larger screens */
footer {
    background-color: #FF671F;
    color: #fff;
    text-align: center;
    padding: 10px;
    position: fixed;
    bottom: 0;
    left: 20px;
    right: 20px;
    box-sizing: border-box;
    border-bottom-left-radius: 10px;
    border-bottom-right-radius: 10px;
}

footer a {
    color: #FFF;
    text-decoration: none;
}

footer a:hover {
    text-decoration: underline;
}

/* CSS for mobile screens */
@media screen and (max-width: 600px) {
    footer {
        padding: 5px;
        font-size: 12px;
    }
}

